<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kponnima.pharmacyassistant.RecommendationActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/recommendationtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/recommendation_message"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/producttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/recommendation_name"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recommendationtext" />

        <ImageView
            android:id="@+id/productimage"
            android:layout_width="320dp"
            android:layout_height="480dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/contentDescription1"
            android:src="@drawable/vicksnyquil8oz"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/producttext" />

        <Button
            android:id="@+id/availabilitybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="displayAvailability"
            android:text="@string/button_viewavailability"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productimage" />

        <TextView
            android:id="@+id/coupontext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coupon_header"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/availabilitybutton" />

        <ImageView
            android:id="@+id/couponimage"
            android:layout_width="320dp"
            android:layout_height="480dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/contentDescription2"
            android:src="@drawable/savings_coupon"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coupontext" />

        <Button
            android:id="@+id/savebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/textColorPrimary"
            android:onClick="displayRegister"
            android:text="@string/button_save"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/printbutton"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/printbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_green_light"
            android:onClick="displayPrintPage"
            android:text="@string/button_print"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintLeft_toRightOf="@+id/savebutton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/donebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:onClick="displayFinishAlert"
            android:text="@string/button_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="48dp"
            tools:layout_editor_absoluteY="1289dp"
            tools:layout_editor_absoluteX="0dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="120dp"
            tools:layout_editor_absoluteY="1217dp"
            tools:layout_editor_absoluteX="0dp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>